# td5m_app_webview

./: .gitignore  AGENTS.md  FUTURE_PLAN.md  README.md  TDS530Logger.spec  calibration.json  calibration.py  config_dir.py  main.py  pyproject.toml  units.json  units.py
templates/: index.html
www/: index.html
