[project]
name = "tds530-tcp-logger"
version = "0.2.0-beta23"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "pyinstaller>=6.21.0",
    "pywebview>=6.2.1; sys_platform != 'linux'",
    "pywebview[qt]>=6.2.1; sys_platform == 'linux'",
]
